# zdfu

./: .gitignore  CMakeLists.txt  README.md  bbuild.sh  prj.conf  sysbuild.conf
boards/: esp32_devkitc_wroom.overlay  stm32f4_disco.overlay
docs/: 1_sysbuild.md  2_mcuboot.md  3_mcumgr.md  4_practical_proof_of_concept.md  5_cheat_sheet.md  6_exploring_esp32.md
src/: main.cpp
sysbuild/mcuboot/: prj.conf
sysbuild/mcuboot/boards/: esp32_devkitc_wroom.conf  stm32f4_disco.overlay
